-Fixed the overflow in the height of 'upload file' page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -392,7 +392,7 @@
 
 .uploadContent{
   /* border: 1px solid blue; */
-  height: 100vh;
+  height: 10vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
